infrastructure/configs/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "argocd.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "argocd.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
